# my_toy

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
1..toy_front/: CMakeLists.txt  ast.h  ast_code_gen.h  common.h  common.h.bak  parser.h  token.h  toy.cpp  toy.cpp.bak  variable_logic.cpp  variable_logic.h
1.1..toy_jit/: CMakeLists.txt  Interpreter.h  README.md  ast.h  common.h  example  parser.h  token.h  toy.cpp  variable_logic.cpp  variable_logic.h
1.1.1.toy_debug/: CMakeLists.txt  Interpreter.h  ast.h  ast_code_gen.h  common.h  parser.h  token.cpp  token.h  toy.cpp  variable_logic.cpp  variable_logic.h
1.1.2.toy_repl/: CMakeLists.txt  Interpreter.h  README.md  ast.h  ast_code_gen.h  common.h  example  parser.h  token.h  toy.cpp  variable_logic.cpp  variable_logic.h
1.2.toy_pass/: CMakeLists.txt  README.md  ast.h  ast_code_gen.h  common.h  parser.h  token.h  variable_logic.cpp  variable_logic.h
1.3..toy_obj/: CMakeLists.txt  variable_logic.cpp
1.3.1.toy_command/: README.md
1.3.1.toy_msp430/: README.md  build.sh
1.3.2.toy_risc/: README.md  toy_riscv.patch
1.3.2.toy_riscv/: README.md  build.sh
1.3.toy_obj/: CMakeLists.txt  ast_code_gen.h  common.h  token.h  toy.cpp  variable_logic.cpp  variable_logic.h
1.4..Toy_CodeGen/: README.MD
1.4.toy_command/: CMakeLists.txt  token.h  toy.cpp  variable_logic.h
2...toy_back/: README.MD
2.1.1.toy_msp430/: README.md  build.sh
2.1.2.toy_msp430_command/: build.sh
2.2.1.toy_tisc/: README.md  build.sh  build_m88k.sh
2.2.2.toy_tisc_command/: build.sh
toy_front/: CMakeLists.txt  toy.cpp
toy_jit/: CMakeLists.txt  toy.cpp
toy_pass/: CMakeLists.txt  example  toy.cpp
